--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -25,3 +25,11 @@ dist-ssr
 
 .env*
 !.env.example
+
+# v0 runtime files (should only exist in preview, not in git)
+__v0_runtime_loader.js
+__v0_devtools.tsx
+__v0_jsx-dev-runtime.ts
+
+# Common ignores
+.next/
